2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 1.9.

2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>

	CVE-2021-46019
	CVE-2021-46022
	CVE-2021-46022
	* src/rec-parser.c (rec_parse_comment): Avoid 0xff being
	interpreted as (int) -1.

2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Remove algol68 bindings support.
	* Makefile.am: Remove algol68 from subdirs.
	* algol68: Delete.

2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>

	* src/rec.h (enum rec_std_field_e): New entry REC_FIELD_SINGULAR.
	* src/rec-field-name.c (fnames): Add "singular".
	* src/rec-rset.c (rec_rset_rename_field): Handle
	REC_FIELD_SINGULAR.
	* src/rec-int.c (rec_int_check_record_singular): Define.
	* torture/utils/recfix.sh: New tests.
	* doc/recutils.texi: Document singular fields.

2022-01-20  Liliana Marie Prikler  <liliana.prikler@ist.tugraz.at>

	* utils/recfmt.c (recfmt_apply_template): Add open brace as excluded
	character in regexp.
	* torture/utils/recfmt.sh (recfmt-curly): New test.

2020-11-18  Jose E. Marchesi  <jemarch@gnu.org>

	* src/rec-parser.c (rec_parse_db): Fix error reporting.

2020-11-11  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/rec-mode.el: Delete.
	* etc/ob-rec.el: Likewise.
	* etc/Makefile.am (dist_lisp_DATA): Remove.
	* doc/rec-mode.texi: Delete.
	* doc/Makefile.am (info_TEXINFOS): Remove rec-mode.texi.
	* m4/pkg.m4: New file.

2020-11-09  Antoine Kalmbach  <ane@iki.fi>

	* utils/recutl.c (recutl_read_file): Update to latest signature
	from gnulib

2020-11-07  Antoine Kalmbach  <ane@iki.fi>

	* etc/rec-mode.el (rec-summary-fields): split by comma and space
	(rec-cmd-show-summary): split minibuffer input

2020-11-06  John Soo  <jsoo1@asu.edu>

	* doc/recutils.texi: Fix long option name for -j/--join.

2020-10-18  Jose E. Marchesi  <jemarch@gnu.org>

	* src/rec.c: Simplify code.
	* src/rec.h: Likewise.
	* src/rec-buf.c: Likewise.
	* src/rec-comment.c: Likewise.
	* src/rec-crypt.c: Likewise.