@@ -1,3 +1,9 @@
+2022-04-25  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* src/rec-db.c (rec_db_set): Avoid segfault with databases with no
+	record sets.
+	* torture/utils/recset.sh: New test.
+
 2022-04-16  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* configure.ac: Bump version to 1.9.
